# GuiApp

./: .env  .gitignore  db.txt  main.py  pyproject.toml  ruff.toml
archive/: test.py
config/: graphic_config.py  page_config.py  resources.qrc  resources_rc.py  server_config.py  user_config.py
src/: login_dialog.py  main_page.py  permission_widget.py
utils/: login_ldap.py
