[project]
name = "gui"
version = "0.1.0"
description = "GUI App whit PySide6 for integrating all pages of the Saman Yazd Steel Complex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ldap3>=2.9.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyside6>=6.10.2",
]

# isort
[tool.isort]
profile = "black"
py_version = "312"
line_length = "120"
use_parentheses = true
include_trailing_comma = true
combine_as_imports = false
force_sort_within_sections = true
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Library"
known_first_party = ["core"]
known_third_party = ["pyside6", "ldap3"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# black
[tool.black]
include = '^(?!.*main\.py).*\.py$'
line-length = 120
target-version = ['py312']
exclude = '''/.git|/.ruff_cache|/.venv|/__pycache__|output.*|base.*|_asset.*'''
